Change game download link

--- a/mac0499/game.html
+++ b/mac0499/game.html
@@ -44,7 +44,7 @@
 				Setas ou <kbd>WASD</kbd> movimentam o personagem, <kbd>E</kbd> interage com NPCs e objetos, <kbd>ESPAÇO</kbd> ataca, <kbd>I</kbd> abre a mochila e números de <kbd>1</kbd> à <kbd>4</kbd> usam itens da barra de uso rápido.
 			</p>
 			<p>
-				Atualmente o jogo só está disponível para linux. Baixe e jogue <a href="builds">o executável mais recente</a>.
+				Atualmente o jogo só está disponível para linux. Baixe e jogue <a href="https://github.com/IceMage144/MAC0499/releases/tag/v0.1">o executável mais recente</a>.
 			</p>
 			<p>
 				Caso não seja possível executá-lo, tente uma das seguintes soluções:
